# gityard

./: NOTICE.md  README.md  compose.yaml  gityard.code-workspace
backend/api/: Dockerfile  README.md  docker-entrypoint.sh  go.mod  go.sum  main.go  pyproject.toml
backend/api/app/: crud.py  deps.py  main.py
backend/api/app/core/: config.py  security.py
backend/api/app/models/: pubkey.py  token.py  user.py
backend/api/app/routers/: healthcheck.py
backend/api/app/routes/: login.py  settings.py  users.py
backend/api/app/tests/: test_endpoints.py
backend/api/config/: config.go
backend/api/database/: connect.go
backend/api/handler/: auth.go  error.go  setting.go  validate.go
backend/api/log/: setup.go
backend/api/middleware/: auth.go
backend/api/model/: account.go  repository.go  tabler.go  token.go  user.go
backend/api/router/: router.go
backend/api/security/: password.go  pubkey.go  pubkey_test.go  token.go
backend/api/service/: auth.go  error.go  setting.go
backend/api/service/repository/: account.go  user.go
backend/api2/: go.mod  go.sum  main.go
backend/api2/config/: config.go
backend/api2/crud/: account.go  user.go
backend/api2/database/: connect.go
backend/api2/handler/: auth.go  error.go  healthcheck.go
backend/api2/log/: logger.go
backend/api2/middleware/: auth.go
backend/api2/model/: account.go  handlename.go  repository.go  user.go
backend/api2/repository/: account.go  user.go
backend/ssh/: README.md  go.mod  main.go
database/: create-table.sql
database/init/: create-table.sql
frontend/: README.md
(+8 files in other folders)
